# E-commerce-Recommendation

./: EDA.py  pyproject.toml  recommendation_system.py  training_data.jsonl
EDA/: statistical_summary.txt
